Fix stylesheet link paths in index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="A deep archive of The Greatest Club On The Earth.">
         <title>Al-Ahly | Records</title>
-        <link rel="stylesheet" href="/css/master.css">
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/all.min.css">
+        <link rel="stylesheet" href="css/master.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/all.min.css">
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
