Update image paths to remove leading slash

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Start Header -->
     <div class="header">
       <div class="container">
-        <img decoding="async" class="logo" src="/images/logo.PNG" alt="missing"/>
+        <img decoding="async" class="logo" src="images/logo.PNG" alt="missing"/>
         <div class="links">
           <span class="icon">
             <span></span>
@@ -52,7 +52,7 @@
         <p>From timless legends to modern heroes.</p>
         <div class="elite-content">
           <div class="card">
-            <img decoding="async" src="/images/nile.JPEG" alt="missing" />
+            <img decoding="async" src="images/nile.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 SCORERS in EPL</h3>
               <p>A ranked list of AL-AHLY historical legends who turned chances into goals.</p>
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="card">
-            <img decoding="async" src="/images/caf.JPEG" alt="missing" />
+            <img decoding="async" src="images/caf.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 SCORERS in CAF</h3>
               <p>A ranked list of AL-AHLY historical legends who turned chances into goals.</p>
@@ -174,7 +174,7 @@
             </div>
           </div>
           <div class="card">
-            <img decoding="async" src="/images/king.JPEG" alt="missing" />
+            <img decoding="async" src="images/king.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 FOREIGNERS SCORERS</h3>
               <p>A ranked list of AL-AHLY historical legends who turned chances into goals.</p>
@@ -329,7 +329,7 @@
           </div>
           <div class="col">
             <div class="image image-column">
-              <img decoding="async" src="/images/trophies.JPEG" alt="missing" />
+              <img decoding="async" src="images/trophies.JPEG" alt="missing" />
             </div>
           </div>
         </div>
@@ -569,7 +569,7 @@
           </div>
           <div class="col">
             <div class="image image-column">
-              <img decoding="async" src="/images/fifa.PNG" alt="missing" />
+              <img decoding="async" src="images/fifa.PNG" alt="missing" />
             </div>
             <div class="underline"></div>
           </div>
