--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img decoding="async" src="images/nile.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 SCORERS in EPL</h3>
-              <p>A ranked list of AL-AHLY historical legends who turned chances into goals.</p>
+              <p>A detailed ranking of AL-AHLY’s most consistent league scorers, highlighting the players whose goals shaped domestic success and defined unforgettable seasons.</p>
               <details>
               <summary>Show Details</summary> <br>
               <table>
@@ -116,7 +116,7 @@
             <img decoding="async" src="images/caf.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 SCORERS in CAF</h3>
-              <p>A ranked list of AL-AHLY historical legends who turned chances into goals.</p>
+              <p>A comprehensive list of AL-AHLY’s decisive scorers in African competitions, celebrating the stars who delivered crucial goals on the continent’s biggest stages.</p>
               <details>
               <summary>Show Details</summary> <br>
               <table>
@@ -177,7 +177,7 @@
             <img decoding="async" src="images/king.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 FOREIGNERS SCORERS</h3>
-              <p>A ranked list of AL-AHLY historical legends who turned chances into goals.</p>
+              <p>A tribute to AL-AHLY’s standout foreign talents, honoring the exceptional players whose goals and impact left a lasting mark on the club’s journey.</p>
                             <details>
               <summary>Show Details</summary> <br>
               <table>
