--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <img decoding="async" src="images/nile.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 SCORERS in EPL</h3>
-              <p>A detailed ranking of AL-AHLY’s most consistent league scorers, highlighting the players whose goals shaped domestic success and defined unforgettable seasons.</p>
+              <p>A detailed overview of AL-AHLY’s most consistent league scorers, presenting the key players whose goals shaped domestic success, built memorable seasons, and left a strong mark on the club’s history.
+</p>
               <details>
               <summary>Show Details</summary> <br>
               <table>
@@ -116,7 +117,8 @@
             <img decoding="async" src="images/caf.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 SCORERS in CAF</h3>
-              <p>A comprehensive list of AL-AHLY’s decisive scorers in African competitions, celebrating the stars who delivered crucial goals on the continent’s biggest stages.</p>
+              <p>A comprehensive view of AL-AHLY’s decisive scorers in African competitions, highlighting the stars who delivered crucial goals, created defining moments, and influenced the club’s journey on the continent.
+</p>
               <details>
               <summary>Show Details</summary> <br>
               <table>
@@ -177,7 +179,7 @@
             <img decoding="async" src="images/king.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 FOREIGNERS SCORERS</h3>
-              <p>A tribute to AL-AHLY’s standout foreign talents, honoring the exceptional players whose goals and impact left a lasting mark on the club’s journey.</p>
+              <p>A tribute to AL-AHLY’s standout foreign talents, showcasing the exceptional players whose goals, exciting performances, and lasting contributions helped write unforgettable chapters in the club’s story.</p>
                             <details>
               <summary>Show Details</summary> <br>
               <table>
