--- a/index.html
+++ b/index.html
@@ -52,11 +52,115 @@
         <p>From timless legends to modern heroes.</p>
         <div class="elite-content">
           <div class="card">
+            <img decoding="async" src="images/alltime.JPEG" alt="missing" />
+            <div class="info">
+              <h3>ALL-TIME TOP SCORERS IN HISTORY</h3>
+              <p>A historic overview of AL-AHLY’s greatest scorers, highlighting the legendary figures whose goals shaped the club’s identity, inspired generations of excellence, and left a legacy across eras in club history.</p>
+              <details>
+              <summary>Show Details</summary> <br>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Player</td>
+                    <td>Goals</td>
+                    <!-- <td>Top Scorer Award</td> -->
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>El-Khatib</td>
+                    <td>159</td>
+                  </tr>
+                  <tr>
+                    <td>Hossam Hassan</td>
+                    <td>142</td>
+                  </tr>
+                  <tr>
+                    <td>Mo Abou-Treika</td>
+                    <td>126</td>
+                  </tr>
+                  <tr>
+                    <td>Emad Moteab</td>
+                    <td>124</td>
+                  </tr>
+                  <tr>
+                    <td>Saleh Sleem</td>
+                    <td>+100</td>
+                  </tr>
+                  <tr>
+                    <td>Mokhtar El-Tetsh</td>
+                    <td>+100</td>
+                  </tr>
+                  <tr>
+                    <td>TuTu</td>
+                    <td>86</td>
+                  </tr>
+                  <tr>
+                    <td>Taha Esmail</td>
+                    <td>81</td>
+                  </tr>
+                  <tr>
+                    <td>Ahmed Mekawy</td>
+                    <td>77</td>
+                  </tr>
+                  <tr>
+                    <td>Waleed Soliman</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                    <td>Ahmed Belal</td>
+                    <td>71</td>
+                  </tr>
+                  <tr>
+                    <td>Abdallah Said</td>
+                    <td>70</td>
+                  </tr>
+                  <tr class="still">
+                    <td>El-Shahat</td>
+                    <td>65</td>
+                  </tr>
+                  <tr>
+                    <td>Mo Ramadan</td>
+                    <td>64</td>
+                  </tr>
+                  <tr class="still">
+                    <td>Mo Shreif</td>
+                    <td>63</td>
+                  </tr>
+                  <tr>
+                    <td>Mo Barakat</td>
+                    <td>61</td>
+                  </tr>
+                  <tr>
+                    <td>Ayman Shawky</td>
+                    <td>59</td>
+                  </tr>
+                  <tr>
+                    <td>Flavio</td>
+                    <td>58</td>
+                  </tr>
+                  <tr>
+                    <td>Osama Hosni</td>
+                    <td>57</td>
+                  </tr>
+                  <tr>
+                    <td>Ahmed Flex</td>
+                    <td>56</td>
+                  </tr>
+                  <!-- <tr>
+                    <td></td>
+                    <td></td>
+                  </tr> -->
+                </tbody>
+              </table>
+              </details>
+            </div>
+          </div>
+          <div class="card">
             <img decoding="async" src="images/nile.JPEG" alt="missing" />
             <div class="info">
-              <h3>TOP 10 SCORERS in EPL</h3>
-              <p>A detailed overview of AL-AHLY’s most consistent league scorers, presenting the key players whose goals shaped domestic success, built memorable seasons, and left a strong mark on the club’s history.
-</p>
+              <h3>ALL-TIME TOP SCORERS in EPL</h3>
+              <p>A detailed overview of AL-AHLY’s most consistent league scorers, presenting the key players whose goals shaped domestic success, built memorable seasons, and left a strong mark on the club’s history.</p>
               <details>
               <summary>Show Details</summary> <br>
               <table>
@@ -108,6 +212,46 @@
                     <td>Ahmed Flex</td>
                     <td>47</td>
                   </tr>
+                  <tr>
+                    <td>Ahmed Mekawy</td>
+                    <td>47</td>
+                  </tr>
+                  <tr>
+                    <td>Waleed Soliman</td>
+                    <td>45</td>
+                  </tr>
+                  <tr>
+                    <td>Mo Ramadan</td>
+                    <td>44</td>
+                  </tr>
+                  <tr class="still">
+                    <td>Mo Shreif</td>
+                    <td>43</td>
+                  </tr>
+                  <tr>
+                    <td>Mo Barakat</td>
+                    <td>42</td>
+                  </tr>
+                  <tr>
+                    <td>Mostafa Abdo</td>
+                    <td>41</td>
+                  </tr>
+                  <tr>
+                    <td>Osama Hosni</td>
+                    <td>39</td>
+                  </tr>
+                  <tr>
+                    <td>Sayed El-Dhazwi</td>
+                    <td>38</td>
+                  </tr>
+                  <tr class="still">
+                    <td>El-Shahat</td>
+                    <td>36</td>
+                  </tr>
+                  <tr>
+                    <td>Ali Maaloul</td>
+                    <td>35</td>
+                  </tr>
                 </tbody>
               </table>
               </details>
@@ -117,8 +261,7 @@
             <img decoding="async" src="images/caf.JPEG" alt="missing" />
             <div class="info">
               <h3>TOP 10 SCORERS in CAF</h3>
-              <p>A comprehensive view of AL-AHLY’s decisive scorers in African competitions, highlighting the stars who delivered crucial goals, created defining moments, and influenced the club’s journey on the continent.
-</p>
+              <p>A comprehensive view of AL-AHLY’s decisive scorers in African competitions, highlighting the stars who delivered crucial goals, created defining moments, and influenced the club’s journey on the continent.</p>
               <details>
               <summary>Show Details</summary> <br>
               <table>
@@ -180,7 +323,7 @@
             <div class="info">
               <h3>TOP 10 FOREIGNERS SCORERS</h3>
               <p>A tribute to AL-AHLY’s standout foreign talents, showcasing the exceptional players whose goals, exciting performances, and lasting contributions helped write unforgettable chapters in the club’s story.</p>
-                            <details>
+              <details>
               <summary>Show Details</summary> <br>
               <table>
                 <thead>
